# Pollywog

./: .gitignore  Cargo.toml  IDEAS.md  TODO.md  index.html
.github/workflows/: ci.yaml  release.yaml
assets/levels/: hello_world.level.json
docs/: index.html  pollywog-ebf886a4064a1b12.js
docs/assets/levels/: hello_world.level.json
prebuilt-releases/web/: index.html  pollywog-92e32b34c7bc7a03.js
src/: bundles.rs  camera.rs  components.rs  dead_screen.rs  enemy.rs  gravity.rs  jump_component.rs  level.rs  lib.rs  main.rs  player.rs  plugins.rs  screens.rs  start_screen.rs  state.rs  velocity.rs
src/bundles/: background.rs  coin.rs  enemy.rs  player.rs
src/components/: animated_sprite.rs  character.rs  collect_coin.rs  damage.rs  dead_screen_plugin.rs  health.rs  jump.rs  kills_player.rs  npc_movement.rs  player_win.rs  user_moveable.rs
src/components/character/: grapple.rs  jump.rs
src/level/: block.rs
src/player/: grapple.rs
src/plugins/: camera.rs  in_game.rs  win_screen.rs
src/plugins/in_game/: bundles.rs  level.rs  player.rs
src/plugins/in_game/bundles/: background.rs  coin.rs
src/plugins/in_game/components/: animated_sprite.rs  background.rs  character.rs  collect_coin.rs  damage.rs  kills_player.rs  npc_movement.rs  player_win.rs
src/plugins/in_game/components/character/: grapple.rs  jump.rs
src/plugins/in_game/level/: block.rs
src/screens/: dead_screen.rs  in_game.rs  win_screen.rs
