[package]
name = "pollywog"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_common_assets = { version = "0.9.0", features = ["json"] }
bevy_rapier2d = "0.23"
bevy_rapier_collider_gen = "0.3.1"
leafwing-input-manager = "0.11"
serde = { version = "1.0.193", features = ["derive"] }

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
