[package]
name = "pollywog"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
# bevy = "0.13"
bevy_common_assets = { version = "0.11", features = ["json"] }
bevy_rapier2d = "0.26"
iyes_perf_ui = "0.2.3"
leafwing-input-manager = "0.13"
serde = { version = "1", features = ["derive"] }

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
